Make everything fork-friendly

--- a/public/client/index.html
+++ b/public/client/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>BHS INSTANT MESSANGER</title>
+    <title>Lakeside Community</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
@@ -12,9 +12,9 @@
     <section id="client">
       <img src="/client/imgs/lake.jpg" width="500" id="lake">
       <fieldset id="startup">
-        <legend>BHS Instant Messanger Startup</legend>
+        <legend>Lakeside Community Startup</legend>
         <form id="signup-form" align="left" autocomplete="off">
-          <h5>Sign Up and explore BHSIM!</h5>
+          <h5>Sign Up and explore the Lake!</h5>
           <actionlink id="alt-log-on"><i>Log On instead?</i></actionlink>
           <br/>
           <br/>
@@ -28,7 +28,7 @@
           <button>Sign Up!</button>
         </form>
         <form id="login-form" align="left" autocomplete="off">
-          <h5 id="login-msg">Log On and explore BHSIM!</h5>
+          <h5 id="login-msg">Log On and explore the Lake!</h5>
           <actionlink id="alt-sign-up"><i>Sign Up instead?</i></actionlink>
           <br/>
           <br/>
@@ -43,7 +43,6 @@
         </form>
       </fieldset>
       <fieldset id="chat">
-        <legend>BurlingtonFOSS/Burlington 1998 is not responsible for any misuse of this application.</legend>
         <section class="add-scroll" id="chatbox">
         </section>
         <fieldset id="message">
@@ -55,7 +54,7 @@
           </form>
         </fieldset>
       </fieldset>
-      <a href="https://codesalvageon.github.io/MYRDERSHAX/" target="_blank">Want to encrypt messages anywhere?</a>
+      <a href="https://SCRAWL-WALL.codesalvageon.repl.co" target="_blank">Want to encrypt messages anywhere?</a>
       <br/>
       <section id="stickers"> 
         <img src="/client/imgs/netnow3.gif"><img src="/client/imgs/msiebutton.gif"><img src="/client/imgs/linkexchange.gif"><img src="/client/imgs/members-choice.gif">
